# MANIFOLD

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  app.py  deploy_shadow.py  docker-compose.yml  main.py  manifold.db  manifold.db-shm  manifold.db-wal  orgs.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: code-institute-template.md
.github/workflows/: manifold-ci.yml
deploy/: fly.toml  railway.json  render.yaml
docs/: API.md  DOMAIN_PACKS.md  INTEGRATION.md
jupyter_notebooks/: MANIFOLD_Phase5_Ontogeny.ipynb  MANIFOLD_V1_Static_Geometry.ipynb  MANIFOLD_V2_MAMO.ipynb  MANIFOLD_V3_Emergent.ipynb
manifold/: __init__.py  __main__.py  _mathutils.py  adapters.py  adversarial.py  agent_profiles.py  agent_registry.py  anomaly.py  auth.py  autodiscovery.py  autodoc.py  b2b.py  brain.py  brainbench.py  bridge.py  build.py  calibrator.py  cell_update_bus.py  chaos.py  clearing.py  cli.py  cognitive_map.py  comms_hub.py  connector.py  connectors.py  consensus.py  consolidator.py  convergence_monitor.py  cooccurrence.py  crypto.py  dag.py  db.py  delegation.py  discovery.py  doctor.py  dynamic_grid.py  encoder.py  encoder_v2.py  entropy.py  escalation_memory.py  (+76 more)
manifold-physical/: README.md  __init__.py  sensor_bridge.py  space_ingestion.py
manifold-ts/: README.md  package-lock.json  package.json  tsconfig.json
manifold-ts/src/: agent.ts  client.ts  index.ts  shadow.ts  shield.ts  types.ts
manifold-ts/src/__tests__/: agent.test.ts  client.test.ts  integration.test.ts
manifold-world/: README.md  index.html  manifest.json
manifold/_archive/: build.py  chaos.py
manifold/deploy/: __init__.py  bootstrapper.py  ssh.py
manifold/domains/: __init__.py  devops.py  finance.py  healthcare.py  infrastructure.py  legal.py  supply_chain.py  trading.py
manifold/encoders/: __init__.py  structured.py  timeseries.py
manifold/experiments/: __init__.py  bayesian_crna.py  calibrated_policy.py  convergence.py  exp_a_bayesian_cbs.py  exp_b_adversarial_injection.py  exp_c_policy_learner_convergence.py  exp_d_threshold_ab_test.py  mapf_cbs.py  mpc_planner.py
manifold/ingestion/: __init__.py  audio_ingester.py  document_ingester.py  image_ingester.py  ingestion_router.py
manifold/plugins/: roomba_plugin.py
manifold/routes/: agents.py  federation.py  governance.py  ingestion.py  physical.py  world.py
manifold/trust_network/: __init__.py  models.py  registry.py
manifold_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
manifold_physical/: QUICKSTART.md  README.md  __init__.py  camera_detector.py  config_example.json  physical_manager.py  sensor_bridge.py  space_ingestion.py
manifold_physical/bridges/: __init__.py  mqtt_bridge.py  roomba_bridge.py
scripts/: demo.py  deploy_oracle.sh  validate_encoder.py
src/manifold/: __init__.py  __main__.py  ontogeny.py
tests/: conftest.py  test_adapters.py  test_adversarial.py  test_adversarial_minimax.py  test_agent_profiles.py  test_agent_registry.py  test_agentic.py  test_anomaly.py  test_assetadapter.py  test_ats_registry.py  test_audio_ingester.py  test_auth.py  test_autodiscovery.py  test_b2b.py  test_bft_federation.py  test_brain.py  test_brain_persistence.py  test_brainbench.py  test_bridge.py  test_calibrator.py  test_camera_detector.py  test_cell_update_bus.py  test_clearing.py  test_cognitive_map.py  test_command_channel.py  test_comms_hub.py  test_connector.py  test_consensus.py  test_consolidator.py  test_convergence_monitor.py  test_convergence_stats.py  test_cooccurrence.py  test_crypto.py  test_dag.py  test_db.py  test_delegation.py  test_deploy_bootstrapper.py  test_deploy_ssh.py  test_discovery.py  test_document_ingester.py  (+116 more)
tests/fixtures/: sample_policy.csv  sample_policy.txt  test_floorplan.json
vscode-manifold/: README.md  package.json  tsconfig.json
vscode-manifold/src/: extension.ts
