[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold-ai"
version = "1.9.0"
description = "The Trust Operating System for AI agents — prices risk, delegates hierarchically, detects adversarial gaming, and writes its own legislation."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "MANIFOLD Contributors"}]
keywords = ["ai", "agents", "trust", "shadow-mode", "llm", "risk", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.1",
]

[tool.setuptools]
packages = ["manifold", "manifold.ingestion", "manifold_physical", "manifold_physical.bridges"]
py-modules = ["deploy_shadow"]

[project.optional-dependencies]
ui = ["streamlit>=1.40"]
dashboard = ["streamlit>=1.40"]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "aiosqlite>=0.19"]
db = ["aiosqlite>=0.19"]
db-pg = ["aiosqlite>=0.19", "asyncpg>=0.29"]
embeddings = ["sentence-transformers>=2.7.0"]
all = ["streamlit>=1.40", "pytest>=9.0", "pytest-asyncio>=0.23", "aiosqlite>=0.19"]

[project.urls]
Homepage = "https://github.com/chizoalban2003-beep/MANIFOLD"
Repository = "https://github.com/chizoalban2003-beep/MANIFOLD"
"Bug Tracker" = "https://github.com/chizoalban2003-beep/MANIFOLD/issues"

[project.scripts]
manifold = "manifold.cli:main"
manifold-shadow = "deploy_shadow:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
