[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "manifold"
version = "2.9.1"
description = "Universal Governance OS for Digital and Physical Intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Alban Chigozirim", email = "chizoalban2003@gmail.com" }]
keywords = ["ai", "governance", "agents", "robotics", "policy", "crna"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyflakes>=3.2",
]
db = [
    "sqlalchemy>=2.0",
]
ui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
research = [
    "scipy>=1.13",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/chizoalban2003-beep/MANIFOLD"
Repository = "https://github.com/chizoalban2003-beep/MANIFOLD"
Issues = "https://github.com/chizoalban2003-beep/MANIFOLD/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["manifold*", "manifold_physical*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.pyflakes]
exclude = ["__pycache__", ".git", "build", "dist"]
